[gd_scene load_steps=9 format=3 uid="uid://diwctax0r8rln"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_cl1p8"]
[ext_resource type="Texture2D" uid="uid://ca2o64ntidf2l" path="res://Assets/temp_apartment.jpg" id="1_srag8"]
[ext_resource type="FontFile" uid="uid://bjjbicluls55w" path="res://Assets/fonts/Agdasima-Regular.ttf" id="2_1yl3k"]
[ext_resource type="FontFile" uid="uid://3hmiw1bfys74" path="res://Assets/fonts/Agdasima-Bold.ttf" id="3_jofxq"]
[ext_resource type="Script" path="res://Scripts/inputText.gd" id="5_ofolb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwsdn"]
bg_color = Color(0.219608, 0.168627, 0.14902, 1)
corner_detail = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmune"]
bg_color = Color(0.219608, 0.168627, 0.14902, 1)
border_width_left = 10
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.219608, 0.168627, 0.14902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q0f7r"]
bg_color = Color(0.219608, 0.168627, 0.14902, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
localize_numeral_system = false
script = ExtResource("1_cl1p8")

[node name="imagePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2

[node name="lookImage" type="TextureRect" parent="imagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_srag8")
expand_mode = 1

[node name="textStuff" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 312.0
grow_horizontal = 2
grow_vertical = 2

[node name="logBackground" type="Panel" parent="textStuff"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qwsdn")

[node name="logText" type="RichTextLabel" parent="textStuff/logBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.721569, 0.760784, 0.72549, 1)
theme_override_colors/table_even_row_bg = Color(0, 0, 0, 0)
theme_override_colors/table_border = Color(0, 0, 0, 0)
theme_override_fonts/normal_font = ExtResource("2_1yl3k")
theme_override_fonts/bold_font = ExtResource("3_jofxq")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
scroll_following = true

[node name="inputText" type="LineEdit" parent="textStuff"]
layout_mode = 2
theme_override_colors/font_color = Color(0.721569, 0.760784, 0.72549, 1)
theme_override_colors/caret_color = Color(0.721569, 0.760784, 0.72549, 1)
theme_override_colors/selection_color = Color(0.219608, 0.168627, 0.14902, 1)
theme_override_constants/outline_size = 0
theme_override_constants/caret_width = 4
theme_override_fonts/font = ExtResource("3_jofxq")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_vmune")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0f7r")
text = "> "
selecting_enabled = false
caret_blink = true
caret_mid_grapheme = false
script = ExtResource("5_ofolb")

[node name="divider" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 306.0
offset_bottom = -204.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.721569, 0.760784, 0.72549, 1)

[connection signal="text_submitted" from="textStuff/inputText" to="." method="_on_input_text_text_submitted"]
